Menambahkan component Hello World Dependency Injection serta menginjeksi class Logger dari services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <h1>{{ title }}</h1>
-<hr/>
+<hr />
 <hello-world></hello-world>
-<hr/>
+<hr />
 <hello-world-bindings></hello-world-bindings>
-<hr/>
+<hr />
 <hello-world-ngif></hello-world-ngif>
+<hr />
+<hello-world-di></hello-world-di>
